Ajout d'une fonctionnalité pour édit les resultats dans l'arbre de tournois

--- a/html/OrganisedTournament.html
+++ b/html/OrganisedTournament.html
@@ -104,7 +104,7 @@
           <div class="box-organised-tournament">
              <!-- carte tournois -->
           <div class="card-tournament">
-            <a href="./tournamentSheet.html" target="_blank">
+            <a href="./tournamentManagement.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -128,7 +128,7 @@
           <!-- fin carte tournoi -->
              <!-- carte tournois -->
           <div class="card-tournament">
-            <a href="./tournamentSheet.html" target="_blank">
+            <a href="./tournamentManagement.html" target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -152,7 +152,7 @@
           <!-- fin carte tournoi -->
              <!-- carte tournois -->
           <div class="card-tournament">
-            <a href="./tournamentSheet.html" target="_blank">
+            <a href="./tournamentManagement.html"  target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -176,7 +176,7 @@
           <!-- fin carte tournoi -->
              <!-- carte tournois -->
           <div class="card-tournament">
-            <a href="./tournamentSheet.html" target="_blank">
+            <a href="./tournamentManagement.html"  target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -200,7 +200,7 @@
           <!-- fin carte tournoi -->
              <!-- carte tournois -->
           <div class="card-tournament">
-            <a href="./tournamentSheet.html" target="_blank">
+            <a href="./tournamentManagement.html"  target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -224,7 +224,7 @@
           <!-- fin carte tournoi -->
              <!-- carte tournois -->
           <div class="card-tournament">
-            <a href="./tournamentSheet.html" target="_blank">
+            <a href="./tournamentManagement.html"  target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
@@ -248,7 +248,7 @@
           <!-- fin carte tournoi -->
              <!-- carte tournois -->
           <div class="card-tournament">
-            <a href="./tournamentSheet.html" target="_blank">
+            <a href="./tournamentManagement.html"  target="_blank">
             <div class="banner-card-tournament"></div>
             <h4>
               T1 tournament | 16 teams | direct elimination | Cashprize 2500RP
