--- a/html/tournamentManagement.html
+++ b/html/tournamentManagement.html
@@ -151,7 +151,7 @@
               <h3>Description</h3>
               <p>
                 Tournoi inter-écoles organisé par La Manu : affrontez les
-                meilleures équipes des écoles de votre région dans une
+                meilleures Joueurs des écoles de votre région dans une
                 compétition intense ! =^_^=
               </p>
               <div class="divider-sheet-tournament"></div>
@@ -525,67 +525,67 @@
       
               <div class="round-one">
                 <div class="cell-tournament" data-index="1">
-                  <p class="cell-team">équipe 1</p>
+                  <p class="cell-team">Joueur 1</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="2">
-                  <p class="cell-team">équipe 2</p>
+                  <p class="cell-team">Joueur 2</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="3">
-                  <p class="cell-team">équipe 3</p>
+                  <p class="cell-team">Joueur 3</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="4">
-                  <p class="cell-team">équipe 4</p>
+                  <p class="cell-team">Joueur 4</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="5">
-                  <p class="cell-team">équipe 5</p>
+                  <p class="cell-team">Joueur 5</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="6">
-                  <p class="cell-team">équipe 6</p>
+                  <p class="cell-team">Joueur 6</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="7">
-                  <p class="cell-team">équipe 7</p>
+                  <p class="cell-team">Joueur 7</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="8">
-                  <p class="cell-team">équipe 8</p>
+                  <p class="cell-team">Joueur 8</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="9">
-                  <p class="cell-team">équipe 9</p>
+                  <p class="cell-team">Joueur 9</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="10">
-                  <p class="cell-team">équipe 10</p>
+                  <p class="cell-team">Joueur 10</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="11">
-                  <p class="cell-team">équipe 11</p>
+                  <p class="cell-team">Joueur 11</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="12">
-                  <p class="cell-team">équipe 12</p>
+                  <p class="cell-team">Joueur 12</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="13">
-                  <p class="cell-team">équipe 13</p>
+                  <p class="cell-team">Joueur 13</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="14">
-                  <p class="cell-team">équipe 14</p>
+                  <p class="cell-team">Joueur 14</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="15">
-                  <p class="cell-team">équipe 15</p>
+                  <p class="cell-team">Joueur 15</p>
                   <span class="cell-result"> 0</span>
                 </div>
                 <div class="cell-tournament" data-index="16">
-                  <p class="cell-team">équipe 16</p>
+                  <p class="cell-team">Joueur 16</p>
                   <span class="cell-result"> 0</span>
                 </div>
               </div>
