--- a/html/tournamentSheet.html
+++ b/html/tournamentSheet.html
@@ -64,7 +64,7 @@
               src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
-            <a href="./subTournament.html">Jouer</a>
+            <a href="./subTournament.html">Tournois rejoints</a>
           </li>
           <li class="divider-nav"></li>
           <li>
@@ -230,7 +230,7 @@
                   </div>
                 </div>
               </div>
-                <!-- DEBUT DE LA SECTION ARBRE DE TOURNOIS -->
+              <!-- DEBUT DE LA SECTION ARBRE DE TOURNOIS -->
               <div class="container-tree-tournament">
                 <!-- SVG -->
                 <svg
@@ -376,6 +376,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="container-button-register">
+        <button class="register-submit">S'inscrire</button>
       </div>
     </main>
 
