--- a/html/subTournament.html
+++ b/html/subTournament.html
@@ -66,7 +66,7 @@
               src="../assets/img/General/play-button.png"
               alt="Icone accueil"
             />
-            <a href="./subTournament.html">Jouer</a>
+            <a href="./subTournament.html">Tournois rejoints</a>
           </li>
           <li class="divider-nav"></li>
           <li>
