conception de la page adminDashboard

--- a/html/tournamentManagement.html
+++ b/html/tournamentManagement.html
@@ -471,7 +471,7 @@
           <button class="submit">Enregistrer</button>
         </div> -->
         <div class="container-button-submit">
-          <button class="submit">Placer les joueurs</button>
+          <button class="submit">Lancer</button>
         </div>
 
         <div class="container-button-submit">
