--- a/html/adminDashboard.html
+++ b/html/adminDashboard.html
@@ -13,11 +13,12 @@
     <!----------------------------------- -->
     <link rel="stylesheet" href="../assets/css/adminDashboard.css" />
     <link rel="stylesheet" href="../assets/css/cardResumeTournament.css" />
-    <link rel="stylesheet" href="../assets/css/navbar.css">
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
     <title>Tableau de bord Administrateur</title>
   </head>
   <body>
-    <header>  <!-- NAVBAR TOP mobile qui sera display: none avec @media -->
+    <header>
+      <!-- NAVBAR TOP mobile qui sera display: none avec @media -->
       <!-- menu hamb fait maison -->
       <nav class="nav-top">
         <div class="icon-hamb">
@@ -93,7 +94,6 @@
           </li>
         </ul>
       </nav>
-      
     </header>
     <main>
       <h1>TABLEAU DE BORD ADMINISTRATEUR :</h1>
@@ -264,9 +264,9 @@
                 placeholder="Rechercher un utilisateur..."
               />
               <label for="users-search">
-              <img
-                src="../assets/img/General/searchIcon.png"
-                alt="Icone de recherche"
+                <img
+                  src="../assets/img/General/searchIcon.png"
+                  alt="Icone de recherche"
               /></label>
             </div>
           </div>
@@ -290,7 +290,8 @@
                 </p>
                 <p class="user-email">JeanDupont@hotmail.fr</p>
                 <p class="user-nickname">
-                  JeannoLapin<span class="green">"Online"</span><img
+                  JeannoLapin<span class="green">"Online"</span
+                  ><img
                     src="../assets/img/General/crayon.png"
                     alt="Modifier utilisateur"
                   />
@@ -308,7 +309,8 @@
                 </p>
                 <p class="user-email">JeanDupont@hotmail.fr</p>
                 <p class="user-nickname">
-                  JeannoLapin<span class="red">"Offline"</span><img
+                  JeannoLapin<span class="red">"Offline"</span
+                  ><img
                     src="../assets/img/General/crayon.png"
                     alt="Modifier utilisateur"
                   />
@@ -325,7 +327,8 @@
                 </p>
                 <p class="user-email">JeanDupont@hotmail.fr</p>
                 <p class="user-nickname">
-                  JeannoLapin <span class="red">"Offline"</span><img
+                  JeannoLapin <span class="red">"Offline"</span
+                  ><img
                     src="../assets/img/General/crayon.png"
                     alt="Modifier utilisateur"
                   />
@@ -342,7 +345,8 @@
                 </p>
                 <p class="user-email">JeanDupont@hotmail.fr</p>
                 <p class="user-nickname">
-                  JeannoLapin <span class="green">"Online"</span><img
+                  JeannoLapin <span class="green">"Online"</span
+                  ><img
                     src="../assets/img/General/crayon.png"
                     alt="Modifier utilisateur"
                   />
@@ -359,14 +363,14 @@
                 </p>
                 <p class="user-email">JeanDupont@hotmail.fr</p>
                 <p class="user-nickname">
-                  JeannoLapin <span class="green">"Online"</span><img
+                  JeannoLapin <span class="green">"Online"</span
+                  ><img
                     src="../assets/img/General/crayon.png"
                     alt="Modifier utilisateur"
                   />
                 </p>
               </a>
             </li>
-            
           </ul>
         </div>
       </div>
